# bioinformatics

./: .gitignore  LICENSE  README.md  bench.ts  generate.go  generate.ts  go.mod  go.sum  index.ts  main.go  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  robo.yml  run.ts  tsconfig.json
.nyc_output/: dd1b4125-905c-46de-ab85-615dfc98ce84.json
.nyc_output/processinfo/: 6fbfaa27-1d15-4064-936f-b5c9f768f780.json  dd1b4125-905c-46de-ab85-615dfc98ce84.json  index.json
benchmark/results/: results.table.html
data/: rosalind_ba1a.txt  rosalind_ba1b.txt  rosalind_ba1c.txt  rosalind_ba1d.txt  rosalind_ba1e.txt  rosalind_ba1f.txt  rosalind_ba1g.txt  rosalind_ba1h.txt  rosalind_ba1i.txt  rosalind_ba1j.txt
exercises/: ba1a.go  ba1a.py  ba1a_test.go  ba1b.go  ba1b.py  ba1b_test.go  ba1c.go  ba1c.py  ba1c_test.go  ba1d.go  ba1d.py  ba1d_test.go  ba1e.go  ba1e.py  ba1e_test.go  ba1f.go  ba1f.py  ba1f_test.go  ba1g.go  ba1g.py  ba1g_test.go  ba1h.go  ba1h.py  ba1h_test.go  ba1i.go  ba1i.py  ba1i_test.go  ba1j.go  ba1j.py  ba1j_test.go  exercises.go
exercises/ch1/: ba1a.test.ts  ba1a.ts  ba1b.test.ts  ba1b.ts  ba1c.test.ts  ba1c.ts  ba1d.test.ts  ba1d.ts  ba1e.test.ts  ba1e.ts  ba1f.test.ts  ba1f.ts  ba1g.test.ts  ba1g.ts  ba1h.test.ts  ba1h.ts  ba1i.test.ts  ba1i.ts
lib/: index.ts  lib.go  lib_test.go  util.go
